feat: api specs updates and gen
